--- a/pom.xml
+++ b/pom.xml
@@ -37,5 +37,15 @@
         </plugins>
     </build>
 
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.apache.httpcomponents</groupId>
+                <artifactId>httpclient</artifactId>
+                <version>4.5.3</version>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
+
 
 </project>
