set ssl system properties for pass handshake

--- a/client/src/main/resources/application-https.properties
+++ b/client/src/main/resources/application-https.properties
@@ -1,6 +1,6 @@
 server.port=443
-server.ssl.key-store=classpath:client-keystore.jks
-server.ssl.key-store-password=client-keystore-pass
-server.ssl.key-password=client-key-pass
-server.ssl.trust-store=classpath:client-truststore.jks
-server.ssl.trust-store-password=client-truststore-pass
+server.ssl.key-store=client/src/main/resources/client-keystore.jks
+server.ssl.key-store-password=secret
+#server.ssl.key-password=client-key-pass
+server.ssl.trust-store=client/src/main/resources/client-truststore_.jks
+server.ssl.trust-store-password=secret
