--- a/server/src/main/resources/application-https.properties
+++ b/server/src/main/resources/application-https.properties
@@ -1,6 +1,8 @@
 server.port=8443
 server.ssl.key-store=classpath:server-keystore.jks
-server.ssl.key-store-password=server-keystore-pass
-server.ssl.key-password=server-key-pass
+server.ssl.key-store-password=secret
+#server.ssl.key-password=server-key-pass
 server.ssl.trust-store=classpath:server-truststore.jks
-server.ssl.trust-store-password=server-truststore-pass
+server.ssl.trust-store-password=secret
+server.ssl.enabled=true
+server.ssl.client-auth=need
